--- a/assets/scss/_tables.scss
+++ b/assets/scss/_tables.scss
@@ -1,11 +1,47 @@
 .woocommerce_page_wc1c
 {
-  .column-config_name
+  .wc1c-admin-form-table
+  {
+    margin: 0;
+
+    .titledesc
+    {
+      padding-left: 5px;
+    }
+  }
+
+  .tablenav
+  {
+    &.top
+    {
+      min-height: 40px;
+      height: auto;
+
+      .tablenav-pages
+      {
+        display: none;
+      }
+    }
+
+    .subsubsub
+    {
+      margin: 0;
+      font-size: 14px;
+      line-height: 28px;
+
+      a
+      {
+        text-decoration: none;
+      }
+    }
+  }
+
+  .column-name
   {
     //width: 200px!important;
   }
 
-  .config_name
+  .name
   {
     font-size: 16px!important;
   }
@@ -52,31 +88,37 @@
 
       &.draft
       {
-        background-color: purple;
+        background-color: rgba(128, 0, 128, 0.9);
         color: white;
       }
 
       &.active
       {
-        background-color: #128003;
+        background-color: rgba(18, 128, 3, 0.6);
         color: white;
       }
 
       &.inactive
       {
-        background-color: #e008ef;
+        background-color: rgba(196, 22, 28, 0.6);
         color: white;
       }
 
       &.error
       {
-        background-color: #c4161c;
+        background-color: #b8151a;
         color: white;
       }
 
       &.processing
       {
-        background-color: #0625ec;
+        background-color: #128003;
+        color: white;
+      }
+
+      &.deleted
+      {
+        background-color: rgba(128, 0, 128, 0.4);
         color: white;
       }
     }
@@ -90,7 +132,7 @@
     }
   }
 
-  .column-config_id
+  .column-configuration_id
   {
 
   }
