--- a/assets/scss/_other.scss
+++ b/assets/scss/_other.scss
@@ -41,3 +41,12 @@
     margin: 0.3em 0;
   }
 }
+
+.wc1c-admin-settings
+{
+  .wc1c-title-wrap
+  {
+    background-color: #dcdcde;
+    margin-top: 30px;
+  }
+}
