--- a/assets/scss/_tables.scss
+++ b/assets/scss/_tables.scss
@@ -52,9 +52,19 @@
     width: 130px;
   }
 
-  .name
+  .column-name .name
   {
     font-size: 16px!important;
+    display: block;
+    margin-bottom: 7px;
+    padding-bottom: 7px;
+    border-bottom: 1px solid #ccd0d4;
+  }
+
+  .column-configuration_id
+  {
+    width: 55px;
+    border-right: 1px solid #ccd0d4;
   }
 
   .remove
