--- a/assets/scss/_other.scss
+++ b/assets/scss/_other.scss
@@ -23,6 +23,13 @@
   {
     margin: 0;
   }
+
+  .button-danger
+  {
+    color: #fff;
+    background-color: darkred;
+    border-color: red;
+  }
 }
 
 .wc1c-title-wrap
