--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,11 +4,31 @@
 @import "bootsrap";
 
 /**
-*** tables
+*** Tables
  */
 @import "tables";
 
 /**
-*** other
+*** Configurations
+ */
+@import "configurations";
+
+/**
+*** Extensions
+ */
+@import "extensions";
+
+/**
+*** Settings
+ */
+@import "settings";
+
+/**
+*** Tools
+ */
+@import "tools";
+
+/**
+*** Other
  */
 @import "other";
