--- a/assets/scss/_configurations.scss
+++ b/assets/scss/_configurations.scss
@@ -1,6 +1,7 @@
 .wc1c-configurations-alert
 {
-  padding: 20px;
+  padding: 10px;
+  padding-left: 20px;
   background-color: white;
   border-left: 4px solid #fd0;
 }
