--- a/assets/scss/wizards/_core.scss
+++ b/assets/scss/wizards/_core.scss
@@ -86,7 +86,7 @@ $breakpoint-phone: 640px;
       & > li, .nav-link {
         flex-basis: 0;
         flex-grow: 1;
-        text-align: center;
+        //text-align: center;
       }
     }
   }
