--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8317,6 +8317,14 @@
 /**
 *** Extensions
  */
+.wc1c-extensions-alert {
+  padding: 20px;
+  padding-left: 40px;
+  background-color: white;
+  border-left: 7px solid #7f54b3;
+  border-radius: 7px;
+}
+
 /**
 *** Settings
  */
