--- a/assets/scss/_tables.scss
+++ b/assets/scss/_tables.scss
@@ -14,9 +14,8 @@
   {
     &.top
     {
-      min-height: 40px;
       height: auto;
-      padding-top: 10px;
+      padding: 0;
 
       .tablenav-pages
       {
