--- a/assets/scss/external/_bootsrap.scss
+++ b/assets/scss/external/_bootsrap.scss
@@ -4,8 +4,8 @@
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/functions";
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/variables";
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/mixins";
-@import "variables";
-@import "mixins";
+@import "../variables";
+@import "../mixins";
 
 /*
 *** bootstrap
