--- a/assets/scss/external/_bootsrap.scss
+++ b/assets/scss/external/_bootsrap.scss
@@ -20,6 +20,7 @@
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/grid";
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/card";
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/tables";
+@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/progress";
 
 // Helpers
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/helpers";
