--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8484,7 +8484,7 @@ a.toc-link {
 }
 
 .wc1c-admin-settings .wc1c-title-wrap {
-  background-color: #dcdcde;
+  background-color: #f0f0f1;
   margin-top: 30px;
 }
 
