--- a/assets/scss/external/_bootsrap.scss
+++ b/assets/scss/external/_bootsrap.scss
@@ -21,6 +21,7 @@
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/card";
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/tables";
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/progress";
+@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/forms";
 
 // Helpers
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/helpers";
