--- a/assets/scss/external/_bootsrap.scss
+++ b/assets/scss/external/_bootsrap.scss
@@ -22,6 +22,7 @@
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/tables";
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/progress";
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/forms";
+@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/nav";
 
 // Helpers
 @import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/helpers";
