--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -8,7 +8,19 @@
     {
       .nav-link
       {
+        background: #f7f7f7;
+        border: 1px solid #f7f7f7;
         padding: 0.5rem 0.7rem;
+        border-bottom: 0;
+        margin-bottom: 0;
+
+        &.active
+        {
+          background: #ffffff;
+          font-weight: 600;
+          border-color: #dee2e6 #dee2e6 #fff;
+          border-bottom: 0;
+        }
       }
     }
   }
