--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9097,6 +9097,7 @@ textarea.form-control-lg {
   padding: 0.5rem 0.7rem;
   border-bottom: 0;
   margin-bottom: 0;
+  color: #1d2327;
 }
 .nav.nav-tabs .nav-item .nav-link.active {
   background: #ffffff;
