--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -13,6 +13,7 @@
         padding: 0.5rem 0.7rem;
         border-bottom: 0;
         margin-bottom: 0;
+        color: #1d2327;
 
         &.active
         {
