--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9172,6 +9172,9 @@ a.toc-link {
 .woocommerce_page_wc1c .wc1c-admin-form-table .titledesc {
   padding-left: 5px;
 }
+.woocommerce_page_wc1c .wc1c-form-table td {
+  padding: 15px 0;
+}
 .woocommerce_page_wc1c .configurations-all .tablenav.top {
   height: auto;
   padding: 0;
