--- a/assets/scss/_tables.scss
+++ b/assets/scss/_tables.scss
@@ -10,6 +10,14 @@
     }
   }
 
+  .wc1c-form-table
+  {
+    td
+    {
+      padding: 15px 0;
+    }
+  }
+
   .configurations-all
   {
     .tablenav
