--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9164,6 +9164,7 @@ a.toc-link {
   padding: 0.3rem 0.5rem;
   margin-top: 0 !important;
   border: 0 !important;
+  transition: all 0.7s;
 }
 .wc1c-sidebar-toc .is-active-link {
   font-weight: normal;
