--- a/assets/scss/_toc.scss
+++ b/assets/scss/_toc.scss
@@ -5,6 +5,7 @@
     padding: .3rem 0.5rem;
     margin-top: 0!important;
     border: 0!important;
+    transition: all 0.7s;
   }
 
   .is-active-link
