--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9303,12 +9303,17 @@ a.toc-link {
 /**
 *** Extensions
  */
-.wc1c-extensions-alert {
+.extensions-alert {
   padding: 20px;
   padding-left: 40px;
   background-color: white;
   border-left: 7px solid #7f54b3;
   border-radius: 7px;
+}
+
+.extensions-all .extensions-all-item .badge {
+  font-size: 0.7rem;
+  padding: 7px 10px;
 }
 
 /**
