--- a/assets/scss/_other.scss
+++ b/assets/scss/_other.scss
@@ -70,3 +70,12 @@
 {
   border: 2px dashed #eeeeee;
 }
+
+.wc1c-custom-metas
+{
+  border: 1px solid #ccd0d4;
+  padding: 5px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  margin-top: 10px;
+}
