--- a/assets/scss/_configurations_table.scss
+++ b/assets/scss/_configurations_table.scss
@@ -11,7 +11,7 @@
 
         .tablenav-pages
         {
-          //display: none;
+          display: none;
           margin: 0;
         }
       }
