--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -1,3 +1,45 @@
+nav
+{
+  .nav-connect
+  {
+    font-weight: normal;
+    padding: 3px 5px;
+    background: transparent;
+    border-top: 5px solid;
+    border-bottom: 0;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+
+    &.status-0
+    {
+      padding: 0 5px;
+      margin-top: 6px;
+      border-color: #fd0;
+    }
+
+    &.status-1
+    {
+      padding: 0 5px;
+      margin-top: 6px;
+      border-color: #c4161c;
+    }
+
+    &.status-2
+    {
+      padding: 0 5px;
+      margin-top: 6px;
+      border-color: #7f54b3;
+    }
+
+    &.status-3
+    {
+      padding: 0 5px;
+      margin-top: 6px;
+      border-color: #128003;
+    }
+  }
+}
+
 .nav
 {
   &.nav-tabs
