--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -1,42 +1,29 @@
-nav
+.nav-connect
 {
-  .nav-connect
+  font-weight: normal!important;
+
+  &.status-0
   {
-    font-weight: normal;
-    padding: 3px 5px;
-    background: transparent;
-    border-top: 4px solid;
-    border-bottom: 2px solid;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
+    border-color: #fd0;
+    color: #fd0;
+  }
 
-    &.status-0
-    {
-      padding: 0 5px;
-      margin-top: 2px;
-      border-color: #fd0;
-    }
+  &.status-1
+  {
+    border-color: #c4161c;
+    color: #c4161c;
+  }
 
-    &.status-1
-    {
-      padding: 0 5px;
-      margin-top: 2px;
-      border-color: #c4161c;
-    }
+  &.status-2
+  {
+    border-color: #7f54b3;
+    color: #7f54b3;
+  }
 
-    &.status-2
-    {
-      padding: 0 5px;
-      margin-top: 2px;
-      border-color: #7f54b3;
-    }
-
-    &.status-3
-    {
-      padding: 0 5px;
-      margin-top: 2px;
-      border-color: #128003;
-    }
+  &.status-3
+  {
+    border-color: #128003;
+    color: #128003;
   }
 }
 
