--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9093,7 +9093,7 @@ textarea.form-control-lg {
 }
 .nav-connect.status-0 {
   border-color: #fd0;
-  color: #fd0;
+  color: #1e1e1e;
 }
 .nav-connect.status-1 {
   border-color: #c4161c;
