--- a/assets/scss/_configurations_table.scss
+++ b/assets/scss/_configurations_table.scss
@@ -34,8 +34,9 @@
   {
     .column-name .configuration-name
     {
-      font-size: 16px!important;
+      font-size: 15px!important;
       line-height: 120%;
+      font-weight: 500;
     }
 
     .column-name .configuration-metas
