--- a/assets/scss/external/_bootsrap.scss
+++ b/assets/scss/external/_bootsrap.scss
@@ -1,31 +1,33 @@
 /*
 *** Init
  */
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/functions";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/variables";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/mixins";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/functions";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/variables";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/maps";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/mixins";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/utilities";
+
 @import "../variables";
 @import "../mixins";
 
 /*
 *** bootstrap
  */
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/root";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/buttons";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/transitions";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/badge";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/utilities";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/button-group";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/list-group";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/grid";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/card";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/tables";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/progress";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/forms";
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/nav";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/root";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/buttons";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/transitions";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/badge";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/button-group";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/list-group";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/grid";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/card";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/tables";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/progress";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/forms";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/nav";
 
 // Helpers
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/helpers";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/helpers";
 
 // Utilities
-@import "D:/Sources/bootstrap/bootstrap-5.1.3/scss/utilities/api";
+@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/utilities/api";
