--- a/assets/scss/external/_bootsrap.scss
+++ b/assets/scss/external/_bootsrap.scss
@@ -1,11 +1,11 @@
 /*
 *** Init
  */
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/functions";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/variables";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/maps";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/mixins";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/utilities";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/functions";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/variables";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/maps";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/mixins";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/utilities";
 
 @import "../variables";
 @import "../mixins";
@@ -13,21 +13,21 @@
 /*
 *** bootstrap
  */
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/root";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/buttons";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/transitions";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/badge";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/button-group";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/list-group";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/grid";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/card";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/tables";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/progress";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/forms";
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/nav";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/root";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/buttons";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/transitions";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/badge";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/button-group";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/list-group";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/grid";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/card";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/tables";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/progress";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/forms";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/nav";
 
 // Helpers
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/helpers";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/helpers";
 
 // Utilities
-@import "D:/Sources/bootstrap/bootstrap-5.2.0/scss/utilities/api";
+@import "G:/Sources/bootstrap/bootstrap-5.2.2/scss/utilities/api";
