--- a/assets/scss/_tables.scss
+++ b/assets/scss/_tables.scss
@@ -14,7 +14,20 @@
   {
     td
     {
-      padding: 15px 0;
+      padding: 10px 0;
+    }
+
+    fieldset
+    {
+      padding-right: 7px;
+      padding-bottom: 7px;
+      border-right: 1px dashed #ccd0d4;
+      border-bottom: 1px dashed #ccd0d4;
+
+      hr
+      {
+        border: 1px solid #f0f0f1!important;
+      }
     }
   }
 
