--- a/assets/scss/_tables.scss
+++ b/assets/scss/_tables.scss
@@ -17,6 +17,15 @@
       padding: 10px 0;
     }
 
+    tr
+    {
+    }
+
+    .titledesc
+    {
+      padding: 10px 10px 10px 0;
+    }
+
     fieldset
     {
       padding-right: 7px;
